--- a/templates/Registro/styles.css
+++ b/templates/Registro/styles.css
@@ -168,6 +168,8 @@ only screen and (min-device-pixel-ratio: 3) {
 	height: 67px;
 	border: none;
 	font-family: "Helvetica Neue" ;
+	color: white;
+	font-size: 20px;
 }
 
 @media only screen and (min--moz-device-pixel-ratio: 2),
@@ -233,6 +235,7 @@ only screen and (min-device-pixel-ratio: 3) {
 	height: 61px;
 	border: none;
 	font-family: "Helvetica Neue" ;
+	font-size: 16px;
 }
 
 @media only screen and (min--moz-device-pixel-ratio: 2),
@@ -329,6 +332,7 @@ only screen and (min-device-pixel-ratio: 3) {
 	height: 61px;
 	border: none;
 	font-family: "Helvetica Neue" ;
+	font-size: 16px ;
 }
 
 @media only screen and (min--moz-device-pixel-ratio: 2),
@@ -394,6 +398,8 @@ only screen and (min-device-pixel-ratio: 3) {
 	width: 355px;
 	height: 61px;
 	border: none;
+	font-family: "Helvetica Neue" ;
+	font-size: 16px ;
 }
 
 @media only screen and (min--moz-device-pixel-ratio: 2),
