crear diseño html-recuperarContraseña2

--- a/templates/RecuperarContraseña2/index.html
+++ b/templates/RecuperarContraseña2/index.html
@@ -1,27 +1,20 @@
-<html>
-	<head>
-		<link href='styles.css' rel='stylesheet'>
-		<meta charset="utf-8"/>
-	</head>
-	<body style="margin:0px;">
-	 <div style="width: 1440px; height: 100%; position:relative; margin:auto;"> 
-		<div class='sk-ab sk-Desk'>
-			<div class='sk-asset sk-solid-white-bg-4E0C86AA-A04E-47E7-937D-DD1B66BE921E'></div>
-			<div class='sk-asset sk-transparent-bg-10CA25C3-7C0B-4729-BA81-B69FE1257A5A'></div>
-			<div class='sk-asset sk-Rect-E3DC01DD-6D5B-4F31-BA10-3AB84EF0845F'></div>
-			<div class='sk-asset sk-BTN-Register-F7B63F07-B3FC-479C-9BAA-A8CFA205D354'>
-				<div class='sk-asset sk-Rectangle-2-Copy-3-FD402939-D81F-4217-A103-42B70D0E3015'></div>
-				<div class='sk-asset sk-Guardar-34C7E7DD-A53F-4B77-BA32-229F055C67EA'><span class="span1">Guardar</span></div>
-			</div>
-			<div class='sk-asset sk-INPUT-Password-00983B3D-FE2A-463E-8A94-0BB83C06349D'>
-				<div class='sk-asset sk-Rectangle-2-Copy-2-F6F5674B-16E5-4CE2-A2E9-E650497E54D3'></div>
-				<div class='sk-asset sk--0BF3F1F9-66B8-4C77-8221-56F9AF69CBE6'><span class="span1">************</span></div>
-				<div class='sk-asset sk-Nueva-Contrasea-D286673F-FDDD-4507-BDEF-CFAA0987804B'><span class="span1">Nueva Contraseña</span></div>
-			</div>
-			<div class='sk-asset sk-Head-B3D0B239-53B8-4184-A09A-243AC3B08769'>
-				<div class='sk-asset sk-Recuperar-Contrasea-63CA6D34-7D80-44A2-BF23-4D19D4AADFFC'><span class="span1">Recuperar Contraseña</span></div>
-			</div>
-		</div>
-	</div>
-	</body>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recuperar Contraseña</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <form id="forma1" method="POST">
+        <h2>Recuperar Contraseña</h2>
+        <br><br><br>
+        <input type="password" name="contrasena" id="contrasena" placeholder="Nueva Contraseña">
+        <br><br><br>
+        <input type="submit" name="guardar" value="Guardar" id="botonGuardar">
+        <br><br><br>
+    </form>
+
+</body>
 </html>
