agregado "id" y "name" al input "email"

--- a/templates/RecuperarContraseña1/index.html
+++ b/templates/RecuperarContraseña1/index.html
@@ -14,7 +14,7 @@
                     <div class='sk-asset sk-Rectangle-2-Copy-3-FD402939-D81F-4217-A103-42B70D0E3015'></div>
                     <div class='sk-asset sk-Enviar-link-34C7E7DD-A53F-4B77-BA32-229F055C67EA'><input type="submit" value="" class="input1" ></input></div>
                 </div>
-                <input type="text" class='sk-asset sk-INPUT-Name-5FD95EED-BC34-4BC9-B21C-1CDFBB01C46C' placeholder="Email"></input>
+                <input type="text" id="email" name="email" class='sk-asset sk-INPUT-Name-5FD95EED-BC34-4BC9-B21C-1CDFBB01C46C' placeholder="Email"></input>
                 <div class='sk-asset sk-Head-B3D0B239-53B8-4184-A09A-243AC3B08769'>
                     <div class='sk-asset sk-Recuperar-Contrasea-63CA6D34-7D80-44A2-BF23-4D19D4AADFFC'><span class="span1"></span></div>
                 </div>
