agregar input - confirmar contraseña

--- a/templates/RecuperarContraseña2/index.html
+++ b/templates/RecuperarContraseña2/index.html
@@ -12,6 +12,8 @@
         <br><br><br>
         <input type="password" name="contrasena" id="contrasena" placeholder="Nueva Contraseña">
         <br><br><br>
+        <input type="password" name="confirmarContrasena" id="confirmarContrasena" placeholder="Confirmar Contraseña">
+        <br><br><br>
         <input type="submit" name="guardar" value="Guardar" id="botonGuardar">
         <br><br><br>
     </form>
