--- a/templates/RecuperarContraseña2/style.css
+++ b/templates/RecuperarContraseña2/style.css
@@ -7,20 +7,19 @@ h2{
 }
 
 #forma1{
-    width: min-content;
-    height: min-content;
+    display: table;
     padding: 5%;
     background:#ffffff;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 
+    border-radius: 1.3%;
+
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    border-radius: 1.5%;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 #botonGuardar{
