--- a/templates/ConfirmacionCuenta/index.html
+++ b/templates/ConfirmacionCuenta/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div id="forma1">
-        <h1>Enhorabuena!</h1>
-        <br><br><br>
-        <h1>Su cuenta ha sido activada con éxito!</h1>
+        <h1>¡Enhorabuena!</h1>
+        <br><br>
+        <h1>Su cuenta ha sido activada con éxito.</h1>
+        <br>
         <a class="btn btn-primary" href="../IniciarSesion/index.html">Iniciar Sesión</a>        
     </div>
 </body>
