--- a/templates/RecuperarContraseña1/index.html
+++ b/templates/RecuperarContraseña1/index.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
 		<link href='style.css' rel='stylesheet'>
-		<meta charset="utf-8"/>
+        <meta charset="utf-8"/>
+        <title>Recuperar Contraseña</title>
 	</head>
 	<body style="margin:0px;">
 	 <div style="width: 1440px; height: 100%; position:relative; margin:auto;"> 
