--- a/templates/Registro/index.html
+++ b/templates/Registro/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<link href='styles.css' rel='stylesheet'>
 		<meta charset="utf-8"/>
+		<title>Registro</title>
 	</head>
 	<body style="margin:0px;">
 	 <div style="width: 1440px; height: 100%; position:relative; margin:auto;"> 
