--- a/templates/ActualizarImagen/index.html
+++ b/templates/ActualizarImagen/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<link href='styles.css' rel='stylesheet'>
 		<meta charset="utf-8"/>
+		<title>Actualizar Imagen</title>
 		<script src="drag&drop.js"></script>
 	</head>
 	<body style="margin:0px;">
