--- a/templates/Dashboard/descargar.html
+++ b/templates/Dashboard/descargar.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Descargar imagen - RSDI</title>
+  <title>Descargar imagen</title>
   <meta content="Red social de imagenes" name="descriptison">
   <meta content="imagenes, red social" name="keywords">
 
