Cambio en Actualizar Imagen

--- a/templates/ActualizarImagen/index.html
+++ b/templates/ActualizarImagen/index.html
@@ -23,9 +23,7 @@
 			<div class='sk-asset sk-upload-field-4B782129-F489-47C7-A62A-6FCB3F5C56F6'>
 				<div class='sk-asset sk-Rectangle-B7B8647B-A0B6-424E-B489-D0FB95D9F6AE'></div>
 				
-				<div id="drop_zone" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);" class='sk-asset sk-Rectangle-B7B8647B-A0B6-424E-B489-D0FB95D9F6AE'>
-					
-				</div>
+				<div id="drop_zone" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);" class='sk-asset sk-Rectangle-B7B8647B-A0B6-424E-B489-D0FB95D9F6AE'></div>
 				
 				<div class='sk-asset sk-Arrastre-y-suelte-la-BD3C50BD-922A-47FD-9623-640893955D3D'><span class="span1">Arrastre y suelte la imagen aquí <br>o <br>búsquela</span></div>
 				<div class='sk-asset sk-materialiconcloud_upload-E15C8457-4295-4445-921B-1F13551B5DA5'>
