Agregar link a Registro

--- a/templates/IniciarSesion/index.html
+++ b/templates/IniciarSesion/index.html
@@ -22,6 +22,9 @@
         <br><br>
         <p id="textOlvideContrasena">¿Olvidó su contraseña?  </div> 
         <a id="recuperarContrasena" href="https://www.google.com/" target="_blank">Recupérela</a>
+
+        <p id="textOlvideContrasena">¿No tiene cuenta?  </div> 
+        <a id="recuperarContrasena" href="https://www.google.com/" target="_blank">Regístrese</a>
     </form>
 
 </body>
