--- a/templates/IniciarSesion/style.css
+++ b/templates/IniciarSesion/style.css
@@ -1,6 +1,5 @@
 body{
     background-color: #a595e6;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 #forma1{
@@ -8,8 +7,10 @@ body{
     padding: 5%;
     background:#ffffff;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 
     border-radius: 1.3%;
+
     position: absolute;
     top: 50%;
     left: 50%;
@@ -35,10 +36,12 @@ input{
     border-style: solid;
     padding-left: 3%;
     padding-right: 3%;
+    left: 0;
 }
 #recordarme{
     min-width: 2px;
     min-height: 2px;
+   
     float: left;
 }
 #recordarmeLabel{
@@ -50,10 +53,32 @@ input{
 
 #recuperarContrasena{
     color: rgb(65, 102, 223);
+    text-decoration: none;
 }
 #textOlvideContrasena{
     color: dimgray;
 }
 h2{
     color: rgb(105, 104, 104);
+}
+
+#mensajeIngresarUsuario{
+    font-size: 13px;
+    color: red;
+    text-align: left;
+    display: none;
+}
+
+#mensajeIngresarContraseña{
+    font-size: 13px;
+    color: red;;
+    text-align: left;
+    display: none;
+}
+
+#mensajeDatosIncorrectos{
+    font-size: 13px;
+    color: red;
+    text-align: left;
+    display: none;
 }
