--- a/templates/RecuperarContraseña2/style.css
+++ b/templates/RecuperarContraseña2/style.css
@@ -1,6 +1,5 @@
 body{
     background-color: #a595e6;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 h2{
@@ -12,6 +11,7 @@ h2{
     padding: 5%;
     background:#ffffff;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 
     border-radius: 1.3%;
 
@@ -41,4 +41,25 @@ input{
     border-style: solid;
     padding-left: 3%;
     padding-right: 3%;
+}
+
+#mensajeIngresarContraseña{
+    font-size: 13px;
+    color: red;;
+    text-align: left;
+    display: none;
+}
+
+#mensajeConfirmarContraseña{
+    font-size: 13px;
+    color: red;
+    text-align: left;
+    display: none;
+}
+
+#mensajeContraseñaNoCoincide{
+    font-size: 13px;
+    color: red;
+    text-align: left;
+    display: none;
 }
