agregar opcion de ir a registrarse

--- a/templates/IniciarSesion/index.html
+++ b/templates/IniciarSesion/index.html
@@ -32,6 +32,8 @@
         <br><br>
         <p id="textOlvideContrasena">¿Olvidó su contraseña?  </div> 
         <a id="recuperarContrasena" href="https://www.google.com/" target="_blank">Recupérela</a>
+        <p id="textNoTieneCuenta">¿No tiene Cuenta?  </div> 
+        <a id="registrese" href="https://www.google.com/" target="_blank">Regístrese</a>
     </form>
 </body>
 </html>
