Agregar: Boton descargar imagen y icono actualizar

--- a/templates/Dashboard/inicio.html
+++ b/templates/Dashboard/inicio.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Inicio</title>
+  <title>RSDI - Dashboard</title>
   <meta content="Red social de imagenes" name="descriptison">
   <meta content="imagenes, red social" name="keywords">
 
@@ -102,6 +102,7 @@
               <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
@@ -112,6 +113,7 @@
               <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
@@ -122,6 +124,7 @@
               <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
@@ -132,6 +135,7 @@
               <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
@@ -142,6 +146,7 @@
               <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
@@ -152,6 +157,7 @@
               <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
@@ -162,6 +168,7 @@
               <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
@@ -172,6 +179,7 @@
               <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
@@ -182,6 +190,7 @@
               <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
               <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
               <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
