--- a/templates/Dashboard/descargar.html
+++ b/templates/Dashboard/descargar.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Descargar imagen</title>
+  <title>Descargar imagen - RSDI</title>
   <meta content="Red social de imagenes" name="descriptison">
   <meta content="imagenes, red social" name="keywords">
 
@@ -69,7 +69,7 @@
               <li><strong>Descargas: </strong>: 1.6M</li>
               <li><strong>Propietario</strong>: Eddy Hide</li>
               <li><strong>Fecha</strong>: 1 Dic, 2020</li>
-              <li><strong>Descargar</strong>: <a href="#">Clic aqui</a></li>
+              <li><button class="btn btn-success btn-md">Descargar</button></li>
             </ul>
           </div>
 
@@ -80,37 +80,28 @@
 
   </main>
   
-  <footer id="footer">
+  <footer id="footer">    
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>Arsha</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        &copy; Copyright <strong><span>Grupo I</span></strong>. Bajo licencia estudiantil
       </div>
     </div>
-  </footer><!-- End Footer -->
+  </footer>
 
   <a href="#" class="back-to-top"><i class="ri-arrow-up-line"></i></a>
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <!-- Terceros JS -->
+  <script src="assets/vendor/jquery/jquery.min.js"></script>  
+  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>  
   <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/venobox/venobox.min.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
 
-  <!-- Template Main JS File -->
+  <!-- Main JS -->
   <script src="assets/js/main.js"></script>
 
 </body>
