--- a/templates/Dashboard/descargar.html
+++ b/templates/Dashboard/descargar.html
@@ -9,19 +9,19 @@
   <meta content="Red social de imagenes" name="descriptison">
   <meta content="imagenes, red social" name="keywords">
 
-  <link href="assets/img/logo.png" rel="icon">
+  <link href="/static/assets/img/logo.png" rel="icon">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/static/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="/static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="/static/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="/static/assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="/static/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="/static/assets/vendor/aos/aos.css" rel="stylesheet">
 
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="/static/assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -30,16 +30,16 @@
     <div class="container d-flex align-items-center">
 
       <!-- <h1 class="logo mr-auto"><a href="index.html">RSDI</a></h1> -->
-      <a href="inicio.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <a href="/" class="logo mr-auto"><img src="/static/assets/img/logo.png" alt="" class="img-fluid"></a>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="inicio.html">Inicio</a></li>
+          <li class="active"><a href="/">Inicio</a></li>
           <li><a href="#">Usuario</a></li>
           <li class="drop-down"><a href="">Imagenes</a>
             <ul>
-              <li><a href="../subirimagen/subirimagen.html">Subir imagen</a></li>
-              <li><a href="portafolio.html">Ver portafolio</a></li>              
+              <li><a href="/imagen_crear">Subir imagen</a></li>
+              <li><a href="/imagen_ver">Ver portafolio</a></li>              
             </ul>
           </li>
           <li><a href="#">Salir</a></li>
@@ -61,7 +61,7 @@
       <div class="container">
 
         <div class="portfolio-details-container">
-          <img src="assets/img/portfolio/descarga.jpg" class="img-fluid" alt="">
+          <img src="/static/assets/img/portfolio/{{ imagen }}" class="img-fluid" alt="">
           
           <div class="portfolio-info">
             <h3>Crema Spa</h3>
@@ -93,16 +93,16 @@
   <div id="preloader"></div>
 
   <!-- Terceros JS -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>  
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>  
-  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/venobox/venobox.min.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="/static/assets/vendor/jquery/jquery.min.js"></script>  
+  <script src="/static/assets/vendor/jquery.easing/jquery.easing.min.js"></script>  
+  <script src="/static/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="/static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="/static/assets/vendor/venobox/venobox.min.js"></script>
+  <script src="/static/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="/static/assets/vendor/aos/aos.js"></script>
 
   <!-- Main JS -->
-  <script src="assets/js/main.js"></script>
+  <script src="/static/assets/js/main.js"></script>
 
 </body>
 
