--- a/templates/Dashboard/inicio.html
+++ b/templates/Dashboard/inicio.html
@@ -9,19 +9,19 @@
   <meta content="Red social de imagenes" name="descriptison">
   <meta content="imagenes, red social" name="keywords">
 
-  <link href="assets/img/logo.png" rel="icon">
+  <link href="/static/assets/img/logo.png" rel="icon">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/static/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="/static/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="/static/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="/static/assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="/static/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="/static/assets/vendor/aos/aos.css" rel="stylesheet">
 
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="/static/assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -30,16 +30,16 @@
     <div class="container d-flex align-items-center">
 
       <!-- <h1 class="logo mr-auto"><a href="index.html">RSDI</a></h1> -->
-      <a href="inicio.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <a href="/" class="logo mr-auto"><img src="/static/assets/img/logo.png" alt="" class="img-fluid"></a>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="inicio.html">Inicio</a></li>
+          <li class="active"><a href="/">Inicio</a></li>
           <li><a href="#">Usuario</a></li>
           <li class="drop-down"><a href="">Imagenes</a>
             <ul>
-              <li><a href="../subirimagen/subirimagen.html">Subir imagen</a></li>
-              <li><a href="portafolio.html">Ver portafolio</a></li>              
+              <li><a href="/imagen_crear">Subir imagen</a></li>
+              <li><a href="/imagen_ver">Ver portafolio</a></li>              
             </ul>
           </li>
           <li><a href="#">Salir</a></li>
@@ -96,101 +96,101 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-public">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Crema Spa</h4>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
-              <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
-              <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
-              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
+              <a href="/static/assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/imagen_descargar?imagen=portfolio-1.jpg" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
+              <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-private">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Energy cafe</h4>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
-              <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
-              <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
-              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
+              <a href="/static/assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/imagen_descargar?imagen=portfolio-2.jpg" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
+              <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-public">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Natural</h4>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
-              <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
-              <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
-              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
+              <a href="/static/assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/imagen_descargar?imagen=portfolio-3.jpg" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
+              <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-private">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Artesania</h4>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
-              <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
-              <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
-              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
+              <a href="/static/assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/imagen_descargar?imagen=portfolio-4.jpg" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
+              <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-private">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Escritorio</h4>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
-              <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
-              <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
-              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
+              <a href="/static/assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/imagen_descargar?imagen=portfolio-5.jpg" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
+              <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-public">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Sun Glasses</h4>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
-              <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
-              <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
-              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
+              <a href="/static/assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/imagen_descargar?imagen=portfolio-6.jpg" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
+              <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-public">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Fotografia</h4>
-              <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
-              <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
-              <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
-              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
+              <a href="/static/assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/imagen_descargar?imagen=portfolio-7.jpg" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
+              <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-public">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Relax</h4>
-              <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
-              <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
-              <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
-              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
+              <a href="/static/assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/imagen_descargar?imagen=portfolio-8.jpg" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
+              <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-public">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="/static/assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Que hora es?</h4>
-              <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
-              <a href="descargar.html" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
-              <a href="eliminar.html" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
-              <a href="../ActualizarImagen/index.html" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
+              <a href="/static/assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Ver"><i class="bx bx-camera"></i></a>
+              <a href="/imagen_descargar?imagen=portfolio-9.jpg" class="details-link" title="Descargar"><i class="bx bx-download"></i></a>
+              <a href="/imagen_borrar" class="delete-link" title="Eliminar"><i class="bx bx-trash"></i></a>
+              <a href="/imagen_actualizar" class="edit-link" title="Actualizar"><i class="bx bx-edit"></i></a>
             </div>
           </div>
 
@@ -214,16 +214,16 @@
   <div id="preloader"></div>
 
   <!-- Terceros JS -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>  
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>  
-  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/venobox/venobox.min.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="/static/assets/vendor/jquery/jquery.min.js"></script>  
+  <script src="/static/assets/vendor/jquery.easing/jquery.easing.min.js"></script>  
+  <script src="/static/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="/static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="/static/assets/vendor/venobox/venobox.min.js"></script>
+  <script src="/static/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="/static/assets/vendor/aos/aos.js"></script>
 
   <!-- Main JS -->
-  <script src="assets/js/main.js"></script>
+  <script src="/static/assets/js/main.js"></script>
 
 </body>
 
