Agregar manejador /logout

--- a/templates/Dashboard/inicio.html
+++ b/templates/Dashboard/inicio.html
@@ -42,7 +42,7 @@
               <li><a href="/imagen_ver">Ver portafolio</a></li>              
             </ul>
           </li>
-          <li><a href="#">Salir</a></li>
+          <li><a href="/logout">Salir</a></li>
 
         </ul>
       </nav>
