--- a/templates/RecuperarContraseña1/index.html
+++ b/templates/RecuperarContraseña1/index.html
@@ -1,26 +1,22 @@
 <html>
 	<head>
-		<link href='style.css' rel='stylesheet'>
         <meta charset="utf-8"/>
         <title>Recuperar Contraseña</title>
+        <script src="validacion.js"></script>
+        <link rel="stylesheet" href="style.css'">
 	</head>
-	<body style="margin:0px;">
-	 <div style="width: 1440px; height: 100%; position:relative; margin:auto;"> 
-		<div class='sk-ab sk-Desk'>
-            <form method="POST">
-                <div class='sk-asset sk-solid-white-bg-4E0C86AA-A04E-47E7-937D-DD1B66BE921E'></div>
-                <div class='sk-asset sk-transparent-bg-10CA25C3-7C0B-4729-BA81-B69FE1257A5A'></div>
-                <div class='sk-asset sk-Rect-E3DC01DD-6D5B-4F31-BA10-3AB84EF0845F'></div>
-                <div class='sk-asset sk-BTN-Register-F7B63F07-B3FC-479C-9BAA-A8CFA205D354'>
-                    <div class='sk-asset sk-Rectangle-2-Copy-3-FD402939-D81F-4217-A103-42B70D0E3015'></div>
-                    <div class='sk-asset sk-Enviar-link-34C7E7DD-A53F-4B77-BA32-229F055C67EA'><input type="submit" value="" class="input1" ></input></div>
-                </div>
-                <input type="text" id="email" name="email" class='sk-asset sk-INPUT-Name-5FD95EED-BC34-4BC9-B21C-1CDFBB01C46C' placeholder="Email"></input>
-                <div class='sk-asset sk-Head-B3D0B239-53B8-4184-A09A-243AC3B08769'>
-                    <div class='sk-asset sk-Recuperar-Contrasea-63CA6D34-7D80-44A2-BF23-4D19D4AADFFC'><span class="span1"></span></div>
-                </div>
-            </form>
-		</div>
-	</div>
+    <body style="margin:0px;">
+        <form id="forma1" method="POST" onsubmit="return validarDatos();" action="{{ url_for('recuperacion')}}">
+            <h2>Recuperar Contraseña</h2>
+            <br><br><br>
+            <div id="mensajeCorreo">
+                <p>Ingresa tu Correo</p>    
+            </div>
+            <input type="text" name="email" id="email" placeholder="E-mail" oninput="limpiarAlertasEmail();">
+            <br><br><br><br><br>
+            <br><br><br>
+            <input type="submit" name="Enviar" value="Enviar" id="botonEnviar" style="cursor: pointer;">
+            <br><br><br>
+        </form>
 	</body>
 </html>
