agregar manejador: registro

--- a/templates/Registro/index.html
+++ b/templates/Registro/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link href='styles.css' rel='stylesheet'>
+		<link href="{{ url_for('static', filename='Registro/styles.css') }}" rel='stylesheet'>
 		<meta charset="utf-8"/>
 		<title>Registro</title>
 	</head>
