agregar manejador login

--- a/templates/IniciarSesion/index.html
+++ b/templates/IniciarSesion/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
-    <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="validacion.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/styleLogin.css') }}">
+    <script type="text/javascript" src="{{ url_for('static', filename='assets/js/validacionLogin.js') }}"></script>
 </head>
 <body>
     <form id="forma1" method="POST" onsubmit="return validarDatos();">
         <h2>Iniciar Sesión</h2>
         <br><br><br>
         <div id="mensajeIngresarUsuario">
-            <p>Especifica tu dirección de correo electrónico</p>
+            <p>Ingresa tu correo</p>
         </div>
+
         <div id="mensajeDatosIncorrectos">
-            <p>El correo electrónico o la contraseña no son válidos</p>
+            <p>
+                {{ error1 }}
+            </p>
         </div>
+
         <input type="text" name="usuario" id="usuario" placeholder="Usuario" oninput="limpiarAlertasUsuario();">
         <br><br>
         <div id="mensajeIngresarContraseña">
@@ -31,9 +35,9 @@
         
         <br><br>
         <p id="textOlvideContrasena">¿Olvidó su contraseña?  </div> 
-        <a id="recuperarContrasena" href="https://www.google.com/" target="_blank">Recupérela</a>
+        <a id="recuperarContrasena" href="/recuperarContraseña1/" target="_blank">Recupérela</a>
         <p id="textNoTieneCuenta">¿No tiene Cuenta?  </div> 
-        <a id="registrese" href="https://www.google.com/" target="_blank">Regístrese</a>
+        <a id="registrese" href="/registro/" target="_blank">Regístrese</a>
     </form>
 </body>
 </html>
