agregar redireccionamiento a recuperar contraseña

--- a/templates/IniciarSesion/index.html
+++ b/templates/IniciarSesion/index.html
@@ -35,7 +35,7 @@
         
         <br><br>
         <p id="textOlvideContrasena">¿Olvidó su contraseña?  </div> 
-        <a id="recuperarContrasena" href="/recuperarContraseña1/" target="_blank">Recupérela</a>
+        <a id="recuperarContrasena" href="/recuperacion" target="_blank">Recupérela</a>
         <p id="textNoTieneCuenta">¿No tiene Cuenta?  </div> 
         <a id="registrese" href="/registro/" target="_blank">Regístrese</a>
     </form>
