--- a/templates/IniciarSesion/index.html
+++ b/templates/IniciarSesion/index.html
@@ -35,9 +35,9 @@
         
         <br><br>
         <p id="textOlvideContrasena">¿Olvidó su contraseña?  </div> 
-        <a id="recuperarContrasena" href="/recuperacion" target="_blank">Recupérela</a>
+        <a id="recuperarContrasena" href="/recuperacion">Recupérela</a>
         <p id="textNoTieneCuenta">¿No tiene Cuenta?  </div> 
-        <a id="registrese" href="/registro/" target="_blank">Regístrese</a>
+        <a id="registrese" href="/registro/">Regístrese</a>
     </form>
 </body>
 </html>
