--- a/templates/IniciarSesion.html
+++ b/templates/IniciarSesion.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/styleLogin.css') }}">
-    <script type="text/javascript" src="{{ url_for('static', filename='assets/js/validacionLogin.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styleLogin.css') }}">
+    <script type="text/javascript" src="{{ url_for('static', filename='js/validacionLogin.js') }}"></script>
 </head>
 <body>
     <form id="forma1" method="POST" onsubmit="return validarDatos();">
