--- a/templates/crear3.html
+++ b/templates/crear3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear Imagen</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='csscrear.css')}}" />
+    <link rel="stylesheet" href="{{url_for('static', filename='css/csscrear.css')}}" />
 
 </head>
 
