--- a/templates/Dashboard/descargar.html
+++ b/templates/Dashboard/descargar.html
@@ -9,7 +9,7 @@
   <meta content="Red social de imagenes" name="descriptison">
   <meta content="imagenes, red social" name="keywords">
 
-  <link href="/static/assets/img/logo.png" rel="icon">
+  <link href="/static/img/logo.png" rel="icon">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -21,7 +21,7 @@
   <link href="/static/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="/static/assets/vendor/aos/aos.css" rel="stylesheet">
 
-  <link href="/static/assets/css/style.css" rel="stylesheet">
+  <link href="/static/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
     <div class="container d-flex align-items-center">
 
       <!-- <h1 class="logo mr-auto"><a href="index.html">RSDI</a></h1> -->
-      <a href="/" class="logo mr-auto"><img src="/static/assets/img/logo.png" alt="" class="img-fluid"></a>
+      <a href="/" class="logo mr-auto"><img src="/static/img/logo.png" alt="" class="img-fluid"></a>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -61,7 +61,7 @@
       <div class="container">
 
         <div class="portfolio-details-container">
-          <img src="/static/assets/img/portfolio/{{ imagen }}" class="img-fluid" alt="">
+          <img src="/static/img/portfolio/{{ imagen }}" class="img-fluid" alt="">
           
           <div class="portfolio-info">
             <h3>Crema Spa</h3>
@@ -102,7 +102,7 @@
   <script src="/static/assets/vendor/aos/aos.js"></script>
 
   <!-- Main JS -->
-  <script src="/static/assets/js/main.js"></script>
+  <script src="/static/js/main.js"></script>
 
 </body>
 
