Actualizar ruta a /login/

--- a/templates/Principal/inicio.html
+++ b/templates/Principal/inicio.html
@@ -39,7 +39,7 @@
         </ul>
       </nav>
             
-      <a href="/login" class="get-started-btn scrollto">Iniciar sesión</a>     
+      <a href="/login/" class="get-started-btn scrollto">Iniciar sesión</a>     
       
     </div>
   </header>
