--- a/templates/ActualizarImagen/index.html
+++ b/templates/ActualizarImagen/index.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<link href='styles.css' rel='stylesheet'>
+		<link href="{{ url_for('static', filename = 'ActualizarImagen/styles.css') }}" rel='stylesheet'>
 		<meta charset="utf-8"/>
 		<title>Actualizar Imagen</title>
-		<script src="drag&drop.js"></script>
+		<script src="{{ url_for('static', filename = 'ActualizarImagen/drag&drop.js') }}"></script>
 	</head>
 	<body style="margin:0px;">
 	 <div style="width: 1440px; height: 100%; position:relative; margin:auto;"> 
