Corregir enlace a Iniciar Sesion

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -18,7 +18,7 @@
 			<div class='sk-asset sk-solid-white-bg-2D949D4D-C9F6-499A-AA60-C8E374978D11'></div>
 			<div class='sk-asset sk-transparent-bg-3AEDF8DF-ED68-4AC1-836E-528ECEBC5E7B'></div>
 			<div class='sk-asset sk-Rect-769BC27E-B572-446F-AF5B-50F3513C2F12'></div>
-			<div class='sk-asset sk-Log-In-F4D6EF02-D17E-4B49-922B-7F5B3420F31A'><span class="span1">¿Ya está registrado? </span><span class="span2"><a href="https://www.google.com">Inicie Sesión.</a></span></div>
+			<div class='sk-asset sk-Log-In-F4D6EF02-D17E-4B49-922B-7F5B3420F31A'><span class="span1">¿Ya está registrado? </span><span class="span2"><a href="{{ url_for('login') }}">Inicie Sesión.</a></span></div>
 			<div class='sk-asset sk-Divider-C2C4683C-DE6D-42BE-BA28-903936BB137F'></div>
 			<div class='sk-asset sk-BTN-Register-E8E6B5DB-18B2-4641-8B37-17D1823BB033'>
 				<input type="submit" value="Registrarse" class='sk-asset sk-Rectangle-2-Copy-3-D59FF9F2-660B-4E37-B731-2FFAFE5F028F'/>
