--- a/templates/IniciarSesion.html
+++ b/templates/IniciarSesion.html
@@ -12,7 +12,7 @@
         <h2>Iniciar Sesión</h2>
         <br><br><br>
         <div id="mensajeIngresarUsuario">
-            <p>Ingresa tu correo</p>
+            <p>Ingrese el usuario</p>
         </div>
 
         <div id="mensajeDatosIncorrectos">
@@ -24,7 +24,7 @@
         <input type="text" name="usuario" id="usuario" placeholder="Usuario" oninput="limpiarAlertasUsuario();">
         <br><br>
         <div id="mensajeIngresarContraseña">
-            <p>Ingresa tu contraseña</p>
+            <p>Ingrese la contraseña</p>
         </div>
         <input type="password" name="contrasena" id="contrasena" placeholder="Contraseña" oninput="limpiarAlertasContraseña();">
         <br><br><br>
