--- a/templates/recuperar2.html
+++ b/templates/recuperar2.html
@@ -17,6 +17,11 @@
         <div id="mensajeContraseñaNoCoincide">
             <p>Las contraseñas no coinciden</p>
         </div>
+        <div id="mensajeDatosIncorrectos">
+            <p>
+                {{ error1 }}
+            </p>
+        </div>
         <input type="password" name="contrasena" id="contrasena" placeholder="Nueva Contraseña" oninput="limpiarAlertasContraseña();">
         <br><br><br>
         <div id="mensajeConfirmarContraseña">
